k8s-manifests/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        fsGroup: 999  # Ensures volume group ownership matches MongoDB user
      containers:
      - name: mongo
        image: papetua/mongo:v2.0.0
        command: ["mongod", "--noauth", "--bind_ip_all"]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
        securityContext:
          runAsUser: 999
          runAsGroup: 999
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard-rwo
