k8s-manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  clusterIP: None  # Headless service
  selector:
    app: mongo
  ports:
  - port: 27017
